--- a/_config.yml
+++ b/_config.yml
@@ -9,13 +9,11 @@
 title: Master of the World
 email: tacoarecool29@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+ Hello Mortals I am Ark the Dark God.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+facebook_username: Noah_Tacos
+github_username:  Halotacos
 
 # Build settings
 markdown: kramdown
